fix/logapPage: заработала регистрация, авторизация, выводятся ошибки с сервера в форме

--- a/src/stories/Input/Input.module.scss
+++ b/src/stories/Input/Input.module.scss
@@ -44,7 +44,7 @@ $red: rgba(235, 27, 27, 1);
 .error {
 	margin: 0;
 	margin: 4px 0 0 14px;
-	max-width: 358px;
+	max-width: 100%;
 	font-family: 'SF-Pro', Arial, Helvetica, sans-serif;
 	color: inherit;
 	font-size: 16px;
